# tauri-starter

./: package.json  pnpm-lock.yaml  react-router.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  entry.client.tsx  main.tsx  root.tsx  routeTree.gen.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/my_tray/: mod.rs
src-tauri/src/windows/: main_win.rs  mod.rs  tray_win.rs
src/assets/: index.css
src/i18/: en.json  index.ts  zh.json
src/routes/: __root.tsx  about.tsx  index.lazy.tsx  index.tsx  tray.lazy.tsx
src/routes/404/: index.tsx
src/routes/_components/: card1.tsx  card2.tsx  card3.tsx
src/routes/tray/: index.tsx
src/types/: auto-import.d.ts  i18next.d.ts
src/utils/: window.ts
